# k4w2

k4w2/: CMakeLists.txt  package.xml
k4w2_interface/: CMakeLists.txt  package.xml  setup.py
k4w2_interface/scripts/: k4w2_interface.py
k4w2_msgs/: CMakeLists.txt  package.xml
k4w2_msgs/msg/: SkeletonRaw.msg  SkeletonState.msg
kinect_joint_controller/: kinect_joint_controller.cpp  kinect_joint_controller.h  kinect_joint_controller.sln  kinect_joint_controller.vcxproj  resource.h  resources.rc  udp_client.cpp  udp_client.h
