<?xml version="1.0"?>
<package>
  <name>k4w2_msgs</name>
  <description>The k4w2_msgs package</description>
  
  <version>0.0.0</version>
  <maintainer email="fsuarez@todo.todo">fsuarez</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  

</package>
